--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,38 @@
 .App {
-  text-align: center;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
+  width: 80px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
   color: white;
+  height: 80px;
+  padding: 0px;
 }
 
-.App-intro {
-  font-size: large;
+.App-header-container {
+  display: flex;
+  flex-direction: row;
 }
 
-.container li {
-  list-style: none;
+@media (min-width: 576px) {
+  .App-header {
+    height: 150px;
+    padding: 20px;
+  }
+  .App-header-container {
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+.container {
+  padding: 10px
 }
 
 @keyframes App-logo-spin {
